Fixed dark mode toggle sizing

--- a/491project/src/App.css
+++ b/491project/src/App.css
@@ -233,8 +233,7 @@ a.navbar-brand:visited {
 }
 
 .toggler img {
-  width: 60%;
-  height: 60%;
+  margin-top: -2px;
 }
 
 /* ===== Sidebar ===== */
